Fixed bug 114, results layout screwed up on IE6. Margin/padding handling bugs in IE6 caused layout issues, so reworked layout to be more resilient.

--- a/trunk/themes/pahma/style/style.css
+++ b/trunk/themes/pahma/style/style.css
@@ -110,8 +110,11 @@ em{
 	position:relative;
 	background-color:#FFF;
 	width:785px;
-	margin:0px auto;
-	padding:0px 20px 15px 20px;
+	margin-top:0px;
+	margin-bottom:0px;
+	margin-left:auto;
+	margin-right:auto;
+	padding:0px 0px 15px 0px;
 	overflow: auto;
 }
 
@@ -523,10 +526,8 @@ div.front_set a:active img {
 }
 
 #results_resultsCol{
-        width:520px;
-        margin-left:265px;
+        width:535px;
         text-align:center;
-
 }
 
 .results_object{
